cli/src/tui/snapshots/braid_cli__tui__ui__tests__snapshot_daemon_pong.snap
---
source: src/tui/ui.rs
expression: terminal.backend()
---
"┌ braid ───────────────────────────────────────────────────┐"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                           braid                          │"
"│                          tick: 0                         │"
"│                       daemon: pong                       │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│            press q to quit | d debug | p ping            │"
"└──────────────────────────────────────────────────────────┘"
