cli/src/tui/snapshots/braid_cli__tui__ui__tests__snapshot_debug_panel.snap
---
source: src/tui/ui.rs
expression: terminal.backend()
---
"┌ braid ─────────────────────┐┌ debug ─────────────────────┐"
"│                            ││Model {                     │"
"│                            ││    running: true,          │"
"│                            ││    tick_count: 0,          │"
"│                            ││    show_debug: true,       │"
"│                            ││}                           │"
"│            braid           ││                            │"
"│           tick: 0          ││                            │"
"│                            ││                            │"
"│                            ││                            │"
"│                            ││                            │"
"│                            ││                            │"
"│                            ││                            │"
"│                            ││                            │"
"│  press q to quit | d debug ││                            │"
"└────────────────────────────┘└────────────────────────────┘"
