cli/src/tui/snapshots/braid_cli__tui__ui__tests__snapshot_default.snap
---
source: src/tui/ui.rs
expression: terminal.backend()
---
"┌ braid ───────────────────────────────────────────────────┐"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                           braid                          │"
"│                          tick: 0                         │"
"│                         daemon: -                        │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│            press q to quit | d debug | p ping            │"
"└──────────────────────────────────────────────────────────┘"
