cli/src/tui/snapshots/braid_cli__tui__ui__tests__snapshot_pool_error.snap
---
source: src/tui/ui.rs
expression: terminal.backend()
---
"┌ braid ───────────────────────────────────────────────────┐"
"│error: config: not found                                  │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│q quit | d debug | r refresh                              │"
"└──────────────────────────────────────────────────────────┘"
