cli/src/tui/snapshots/braid_cli__tui__ui__tests__snapshot_pool_healthy.snap
---
source: src/tui/ui.rs
expression: terminal.backend()
---
"┌ braid ───────────────────────────────────────────────────┐"
"│Pool      /mnt/storage                                    │"
"│Status    healthy                                         │"
"│Capacity  32.34 MiB used / 992.00 MiB (3%)                │"
"│          422.44 MiB free                                 │"
"│Scrub     never                                           │"
"│Errors    0 total                                         │"
"│                                                          │"
"│NAME              STATUS   LUKS  POOL  R   W   F   C   G  │"
"│ata-WDC_WD40EFRX_ present  open  yes   0   0   0   0   0  │"
"│ata-WDC_WD40EFRX_ present  open  yes   0   0   0   0   0  │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│q quit | d debug | r refresh                              │"
"└──────────────────────────────────────────────────────────┘"
