cli/src/tui/snapshots/braid_cli__tui__ui__tests__snapshot_pool_not_mounted.snap
---
source: src/tui/ui.rs
expression: terminal.backend()
---
"┌ braid ───────────────────────────────────────────────────┐"
"│Pool      /mnt/storage                                    │"
"│Status    not mounted                                     │"
"│Capacity  -                                               │"
"│                                                          │"
"│Scrub     -                                               │"
"│Errors    0 total                                         │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│q quit | d debug | r refresh                              │"
"└──────────────────────────────────────────────────────────┘"
