cli/src/tui/snapshots/braid_cli__tui__ui__tests__snapshot_with_ticks.snap
---
source: src/tui/ui.rs
expression: terminal.backend()
---
"┌ braid ───────────────────────────────────────────────────┐"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                           braid                          │"
"│                         tick: 42                         │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                 press q to quit | d debug                │"
"└──────────────────────────────────────────────────────────┘"
